Fix clipped background for billing secion

--- a/css/compat/themes/compat-loobek-401-beta-21.css
+++ b/css/compat/themes/compat-loobek-401-beta-21.css
@@ -2,6 +2,10 @@ body.theme-loobek.woocommerce-checkout form.woocommerce-checkout {
   padding-top: 0;
 }
 
+body.theme-loobek .fc-wrapper .woocommerce-billing-fields {
+  overflow: visible;
+}
+
 body.theme-loobek div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-order-table {
   margin: 0 -20px !important;
 }
