--- a/sass/compat/themes/loobek/_checkout-steps.scss
+++ b/sass/compat/themes/loobek/_checkout-steps.scss
@@ -5,3 +5,7 @@
 body#{ $_body-theme-selector }#{ $_body-page-selector } form.woocommerce-checkout {
 	padding-top: 0;
 }
+
+body#{ $_body-theme-selector } .fc-wrapper .woocommerce-billing-fields {
+	overflow: visible;
+}
